--- a/final/bountifulfresh.html
+++ b/final/bountifulfresh.html
@@ -34,22 +34,22 @@
             <fieldset>
                 <h2>Select your fillings</h2>
                 <legend>Stuffers</legend>
-                <label class = "top"> What Fruit you want?
-                    <select name="fruits">
-                        <option value="test">yes</option>
+                <label for = "fruit-select"> What Fruit you want?</label>
+                    <select id="fruit-select" name = "fruit">
+                        <option value="">Select a fruit</option>
                     </select>
-                    <select name="fruits">
-                        <option value=""></option>
+                    <select name="fruit-select">
+                        <option value="">Select a fruit</option>
                     </select>
-                    <select name="fruits">
-                        <option value=""></option>
+                    <select name="fruit-select">
+                        <option value="">Select a fruit</option>
                     </select>
-                </label>
             </fieldset>
         </form>
     </main>
     <footer>
 
     </footer>
+    <script src="scripts/fruits.js"></script>
 </body>
 </html>
