--- a/final/abount.html
+++ b/final/abount.html
@@ -7,26 +7,61 @@
     <meta name="description" content="Mike H's Bountiful Foods Index for BYU-I WDD230 Class">
     <meta name="keywords" content="HTML, CSS, Javascript">
     <meta name="Author" content="Mike Helm">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="icon" href="favicon.ico">
     <title>Bountiful Foods</title>
 </head>
 <body>
     <header>
-        <img src="images/logo2.webp" alt="logo for bountiful foods">
-        <ul id='primaryNav'>
-            <li><a href="bountifulhome.html">Home</a> </li>
-            <li><a href="bountifulfresh.html">Freshness Abounding</a></li>
-            <li><a href="abount.html">Abount Us</a></li>
-            <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
-            <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
-            <li><a href="https://www.myspace.com"><img src="images/Myspace_logo.svg" width="20" height="20" alt="myspace Link"></a></li>
-        </ul>
-    </nav>
+        <div id="banner">
+            <img id=logo src="images/logo2.webp" alt="logo for bountiful foods" width="150" height="150">
+        </div>
+        <nav>
+            <button id='hamburgerBtn'><span>&#9776;</span><span>X</span></button>    
+            <ul id='primaryNav'>
+                <li><a href="bountifulhome.html">Home</a> </li>
+                <li><a href="bountifulfresh.html">Freshness Abounding</a></li>
+                <li><a href="abount.html">Abount Us</a></li>
+                <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
+                <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
+                <li><a href="https://www.myspace.com"><img src="images/Myspace_logo.svg" width="20" height="20" alt="myspace Link"></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <section id="hero">
+            <a href="bountifulfresh.html">Become Sir-Mix-Alot</a>
+            <img src="images/old-store-inside.webp" alt="What used to be the store"
+            srcset="images/old-store-inside-300w.webp, images/old-store-inside-200w.webp" width="500"
+            sizes="(min-width: 500px) 700px, 500px" loading="eager">
+        </section>
+        <section id="abount">
+            <h2>Abount Us</h2>
+            <p>We were thought of by a very lonely drink maker. He wanted to have more people come and enjoy his drinks so he decided to start investing in local farmers who could give him the <strong>FRESHEST </strong> of veggies and fruits that would blow your mind</p>
+            <p>We get the majority of our food from farmers out here in Carlsbad and surrounding areas that also love to drink our smoothies! Win Win!</p>
+        </section>
+        <section id="map">
+            <h2> Carlsbad CA</h2>
+            <iframe id="map"
+            src="https://goo.gl/maps/LSQULL1wwBh2aKQv8" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section id="contact">
+            <h2>Wanna chat?</h2>
+            <h3> Contact us by writing a letter or something, its 2023</h3>
+            867 Carlsbad Road<br>
+            Carlsbad, CA 53091<br><br>
+            Phone: (401)867-5309<br>
+            Fax: (401)867-5310<br>
+            insta: @bountifulfoods
+        </section>
     </main>
     <footer>
-
+        <p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
+    <script src="scripts/apps.js" ></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
 </html>
