--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -84,6 +84,9 @@
                 <div class="made"># of Drinks made</div>
             </div>
         </section>
+        <section id="fotd">
+            <img src="images/fotd.jpg" width="400" height="300" loading="eager">
+        </section>
     </main>
     <footer>
         <p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
