--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -94,6 +94,6 @@
     <script src="scripts/apps.js" ></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/weatherapi.js"></script>
-
+    <script src="scripts/drinks.js"></script>
 </body>
 </html>
