added drink counter to home

--- a/final/bountifulhome.html
+++ b/final/bountifulhome.html
@@ -78,10 +78,10 @@
                 <div id="forecast"></div>
             </div>
         </section>
+        <div id="drinkout"></div>
         <section id="drinks">
-            <div class="drinksmade">
                 <h2>Drink master</h2>
-                <div class="made"># of Drinks made</div>
+                <div id="made"># of Drinks made</div>
             </div>
         </section>
         <section id="fotd">
@@ -95,5 +95,6 @@
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/weatherapi.js"></script>
     <script src="scripts/drinks.js"></script>
+    <script src="scripts/fruits.js"></script>
 </body>
 </html>
