--- a/final/bountifulfresh.html
+++ b/final/bountifulfresh.html
@@ -23,6 +23,7 @@
                 <li><a href="bountifulhome.html">Home</a> </li>
                 <li><a href="bountifulfresh.html">Freshness Abounding</a></li>
                 <li><a href="abount.html">Abount Us</a></li>
+                <li><a href="resources.html">RESORUCES</a></li>
                 <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
                 <li><a href="https://www.facebook.com"><img src="images/facebook_logo.svg" width="20" height="20" alt="facebook Link"></a></li>
                 <li><a href="https://www.myspace.com"><img src="images/Myspace_logo.svg" width="20" height="20" alt="myspace Link"></a></li>
