--- a/final/resources.html
+++ b/final/resources.html
@@ -33,31 +33,11 @@
         </nav>
     </header>
     <main>
-        <section id="hero">
-            <a href="bountifulfresh.html">Become Sir-Mix-Alot</a>
-            <img src="images/old-store-inside.webp" alt="What used to be the store"
-            srcset="images/old-store-inside-300w.webp, images/old-store-inside-200w.webp" width="500"
-            sizes="(min-width: 500px) 700px, 500px" loading="eager">
-        </section>
-        <section id="abount">
-            <h2>Abount Us</h2>
-            <p>We were thought of by a very lonely drink maker. He wanted to have more people come and enjoy his drinks so he decided to start investing in local farmers who could give him the <strong>FRESHEST </strong> of veggies and fruits that would blow your mind</p>
-            <p>We get the majority of our food from farmers out here in Carlsbad and surrounding areas that also love to drink our smoothies! Win Win!</p>
-        </section>
-        <section id="map">
-            <h2> Carlsbad CA</h2>
-            <iframe id="map"
-            src="https://goo.gl/maps/LSQULL1wwBh2aKQv8" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </section>
-        <section id="contact">
-            <h2>Wanna chat?</h2>
-            <h3> Contact us by writing a letter or something, its 2023</h3>
-            867 Carlsbad Road<br>
-            Carlsbad, CA 53091<br><br>
-            Phone: (401)867-5309<br>
-            Fax: (401)867-5310<br>
-            insta: @bountifulfoods
-        </section>
+    heres what was used for this<br><br>
+    <a href = "https://unsplash.com/photos/U4QkDQW84sg">My hero</a><br>
+    <a href = "https://picresize.com/en/edit">Pic resizer</a><br>
+    <a href = "https://unsplash.com/photos/lw8GflbJwLc">Credit Sam Hojati</a><br>
+    <a href = "https://fineartamerica.com/featured/1-alabama-general-store-1936-library-of-congress.html">Old store image</a><br>
     </main>
     <footer>
         <p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
